--- a/src/component/setting/css/setting-style.css
+++ b/src/component/setting/css/setting-style.css
@@ -73,8 +73,8 @@
 }
 
 .tab-type {
-    flex: 0 0 110px;
-    text-align: center;
+    flex: 0 0 100px;
+    /* text-align: center; */
     border: 1px solid #ccc;
     background-color: #cccccc;
     border-top-right-radius: 5px;
@@ -83,9 +83,62 @@
     font-weight: 500;
     font-size: 15px;
     color: #202c4b;
+    position: relative;
 }
 
 .active-tab-type {
     background-color: #fff;
     border-bottom: #fff;
+}
+
+
+.grid-department {
+    display: grid;
+    grid-template-columns: 50px 1fr 300px 300px;
+    gap: 10px;
+    padding: 10px;
+    align-items: center;
+    border-bottom: 1px solid #ddd;
+}
+
+.grid-department span {
+    font-size: 15px;
+}
+
+.grid-department .span-department:hover {
+    color: #e50012;
+}
+
+.tab-plus {
+    flex: none;
+    width: 50px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    text-align: center;
+}
+
+.tab-plus:hover {
+    background-color: #e50012;
+    color: #fff;
+    border-color: #fff;
+    cursor: pointer;
+
+}
+
+.tab-type .close-icon {
+    position: absolute;
+    right: 5px;
+    top: 52%;
+    transform: translateY(-50%);
+    color: black;
+    cursor: pointer;
+    display: none;
+}
+
+.tab-type:hover .close-icon {
+    display: block;
+}
+
+.input-error {
+    border: 1px solid #e50012;
 }
