--- a/src/component/setting/css/crud-style.css
+++ b/src/component/setting/css/crud-style.css
@@ -197,7 +197,6 @@ select {
 }
 
 .select-options {
-    top: -200px;
     position: absolute;
     width: 100%;
     border: 1px solid #ccc;
@@ -205,9 +204,8 @@ select {
     background: #fff;
     display: none;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-    max-height: 200px;
     overflow-y: auto;
-    z-index: 1000;
+    z-index: 9999 !important;
 }
 
 .select-options div {
