--- a/public/assets/css/my-style.css
+++ b/public/assets/css/my-style.css
@@ -71,3 +71,60 @@
 .hrm-menu {
     box-shadow: 0px 4px 8px 2px rgba(198, 198, 198, 0.4) !important;
 }
+
+.filter-search {
+    border: 1px solid #e5e7eb !important;
+    cursor: pointer;
+}
+
+.notification-status-dot-filter {
+    width: 6px;
+    height: 6px;
+    background: #E70D0D;
+    border-radius: 50%;
+    position: absolute;
+    right: 5px;
+    top: 5px;
+    z-index: 1;
+}
+
+.footer {
+    /* bottom: 0; */
+}
+
+.strong {
+    color: #E70D0D;
+}
+
+.submenu-context {
+    display: none;
+    position: absolute;
+    top: 0;
+    left: 100%;
+    /* Đẩy sang phải */
+    background: white;
+    border: 1px solid #ccc;
+    box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
+    min-width: 130px;
+    z-index: 100;
+}
+
+/* Hiện menu phụ khi hover vào li */
+.has-submenu-context:hover .submenu-context {
+    display: block;
+}
+
+.submenu-context ul li {
+    border-radius: 0 !important;
+    padding: 5px 10px !important;
+}
+
+
+.menu-title {
+    border-radius: 10px;
+    top: -3px;
+    right: 138px;
+    position: absolute;
+    z-index: 100;
+    color: #6b7280;
+}
