--- a/src/contextmenu/css/context-menu-style.css
+++ b/src/contextmenu/css/context-menu-style.css
@@ -2,7 +2,7 @@
     background: white;
     border-radius: 8px;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
-    padding: 10px;
+    padding: 0 !important;
     font-size: 14px;
 }
 
@@ -14,6 +14,7 @@
 
 .menu ul li {
     padding: 10px;
+    padding-left: 15px;
     display: flex;
     align-items: center;
     cursor: pointer;
@@ -26,4 +27,27 @@
 
 .menu ul li i {
     margin-right: 10px;
+}
+
+.menu ul li:first-child {
+    border-top-right-radius: 10px;
+    border-top-left-radius: 10px;
+}
+
+.menu ul li:last-child {
+    border-bottom-right-radius: 10px;
+    border-bottom-left-radius: 10px;
+}
+
+.main-menu {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+    position: relative;
+}
+
+.main-menu li {
+    padding: 10px 20px;
+    position: relative;
+    cursor: pointer;
 }
